--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
-/* body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
-} */
+h2.unchecked{
+  border-bottom: 1px solid #ddd;
+  padding: 9px 10px 7px;
+  background: #F6F5E7;
+  text-decoration: none;
+  color: #333;
+  font-size: 16px
+}
+h2.checked{
+  border-bottom: 1px solid #ddd;
+  padding: 9px 10px 7px;
+  background: #ffa500;
+  text-decoration: none;
+  color: #333;
+  font-size: 16px
+}
