--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,25 @@
-h2.unchecked{
-  border-bottom: 1px solid #ddd;
-  padding: 9px 10px 7px;
-  background: #F6F5E7;
-  text-decoration: none;
-  color: #333;
-  font-size: 16px
+#go-to-top {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
 }
-h2.checked{
+
+div.unwatching {
   border-bottom: 1px solid #ddd;
   padding: 9px 10px 7px;
   background: #ffa500;
   text-decoration: none;
   color: #333;
-  font-size: 16px
+  font-size: 16px;
 }
-.pushbtn{
+div.unwatching button.unwatching {
+  display: none;
+}
+
+div.watching button.watching {
+  display: none;
+}
+
+.pushbtn {
   background: #ffa500;
-}
-table.row tr{
-  background: #f1f9c5;
-  font-weight: normal;
-  color: #224619;
-}
-.row {
-  width: 100%;
-  border-collapse: collapse;
-  border-top: 1px solid #333;
-  border-right: 1px solid #333;
-}
-
-.row th,
-.row td{
-  padding: 5px;
-  font-weight: normal;
-  border-left: 1px solid #333;
-  border-bottom: 1px solid #333;
-}
-.row th{
-  background-color: #CDEAFF;
-}
-.row td{
-  background-color: #fbf9f9;
-}
-.copy-btn {
-  padding: 3px 10px;
-  color: #FFF;
-  background: #1e90ff;
-  border: none;
-  border-radius: 10px;
-}
-
-.copy-btn:hover {
-  background: #1872cc;
-}
+}/*# sourceMappingURL=index.css.map */
